--- a/.github/workflows/openwrt.yml
+++ b/.github/workflows/openwrt.yml
@@ -81,7 +81,7 @@ jobs:
       - name: 组织文件目录
         id: organize
         run: |
-          cd /lede/bin/targets/*/*
+          cd bin/targets/*/*
           rm -rf packages
           echo "FIRMWARE=$PWD" >> $GITHUB_ENV
           echo "::set-output name=status::success"
