--- a/.github/workflows/openwrt.yml
+++ b/.github/workflows/openwrt.yml
@@ -76,12 +76,12 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: OpenWrt_firmwaOpenWrt_firmware${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}re
-          path: openwrt/bin
+          path: ./bin
 
       - name: 组织文件目录
         id: organize
         run: |
-          cd openwrt/bin/targets/*/*
+          cd ./bin/targets/*/*
           rm -rf packages
           echo "FIRMWARE=$PWD" >> $GITHUB_ENV
           echo "::set-output name=status::success"
@@ -98,7 +98,7 @@ jobs:
         run: |
           echo "::set-output name=release_tag::$(date +"%Y.%m.%d-%H%M")"
           touch release.txt
-          echo "::set-output name=status::success           
+          echo "::set-output name=status::success"          
             
       - name: 上传固件到release
         uses: softprops/action-gh-release@v1
