--- a/.github/workflows/openwrt.yml
+++ b/.github/workflows/openwrt.yml
@@ -71,12 +71,6 @@ jobs:
           grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
           [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
           echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
-          
-      - name : Upload artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: OpenWrt_firmwaOpenWrt_firmware${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}re
-          path: ./bin
 
       - name: 组织文件目录
         id: organize
@@ -96,7 +90,7 @@ jobs:
       - name: 生成发布标签
         id: tag
         run: |
-          echo "::set-output name=release_tag::$(date +"%Y.%m.%d-%H%M")"
+          echo "::set-output name=release_tag::$(date +"%Y.%m.%d")"
           touch release.txt
           echo "::set-output name=status::success"          
             
