--- a/.github/workflows/openwrt.yml
+++ b/.github/workflows/openwrt.yml
@@ -19,17 +19,6 @@ on:
     types: started
 
 env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
-  REPO_BRANCH: master
-  FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: .config
-  DIY_P1_SH: diy-part1.sh
-  DIY_P2_SH: diy-part2.sh
-  UPLOAD_BIN_DIR: false
-  UPLOAD_FIRMWARE: true
-  #UPLOAD_COWTRANSFER: false
-  #UPLOAD_WETRANSFER: false
-  UPLOAD_RELEASE: false
   TZ: Asia/Shanghai
 
 jobs:
@@ -52,7 +41,7 @@ jobs:
 
       - name: 下载lede源码和获取自己定义.config文件
         run: |
-          git clone $REPO_URL
+          git clone https://github.com/coolsnowwolf/lede
           cp .config ./lede/.config
           cd lede
 
