--- a/.github/workflows/rmac2100.yml
+++ b/.github/workflows/rmac2100.yml
@@ -11,6 +11,8 @@
 name: Build OpenWrt
 
 on:
+  schedule:
+   - cron: 0 2 * * *
   repository_dispatch:
   workflow_dispatch:
     inputs:
@@ -23,7 +25,7 @@ env:
   REPO_URL: https://github.com/coolsnowwolf/lede
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: .config
+  CONFIG_FILE: rmac2100.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   UPLOAD_BIN_DIR: false
@@ -126,7 +128,7 @@ jobs:
       with:
         name: OpenWrt_firmware${{ env.DEVICE_NAME }}${{ env.FILE_DATE }}
         path: ${{ env.FIRMWARE }}
-        
+
     - name: Generate release tag
       id: tag
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
