--- a/rmac2100.config
+++ b/rmac2100.config
@@ -54,8 +54,8 @@ CONFIG_PACKAGE_luasocket=y
 CONFIG_PACKAGE_luci-app-adbyby-plus=y
 CONFIG_PACKAGE_luci-app-argonne-config=y
 CONFIG_PACKAGE_luci-app-eqos=y
-CONFIG_PACKAGE_luci-app-frpc=y
-CONFIG_PACKAGE_luci-app-frps=y
+#CONFIG_PACKAGE_luci-app-frpc=y
+#CONFIG_PACKAGE_luci-app-frps=y
 CONFIG_PACKAGE_luci-app-sqm=y
 # CONFIG_PACKAGE_luci-app-ssr-plus is not set
 CONFIG_PACKAGE_luci-app-ttyd=y
@@ -71,8 +71,8 @@ CONFIG_PACKAGE_luci-compat=y
 CONFIG_PACKAGE_luci-i18n-adbyby-plus-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-argonne-config-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-eqos-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-frpc-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-frps-zh-cn=y
+#CONFIG_PACKAGE_luci-i18n-frpc-zh-cn=y
+#CONFIG_PACKAGE_luci-i18n-frps-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-sqm-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-vssr-zh-cn=y
