--- a/.github/workflows/rmac2100.yml
+++ b/.github/workflows/rmac2100.yml
@@ -133,7 +133,7 @@ jobs:
       id: tag
       if: env.UPLOAD_RELEASE == 'true' && !cancelled()
       run: |
-        echo "::set-output name=release_tag::$(date +"%Y.%m.%d-%H%M")"
+        echo "::set-output name=release_tag::$(date +"%Y.%m.%d-%H%M")${{ env.DEVICE_NAME }}"
         touch release.txt
         echo "::set-output name=status::success"
     - name: Upload firmware to release
