--- a/.github/workflows/XiaoMi-R4A-Gigabit.yml
+++ b/.github/workflows/XiaoMi-R4A-Gigabit.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: Build rmac2100 OpenWrt
+name: Build XiaoMi-R4A-Gigabit
 
 on:
   #schedule:
